--- a/zimnenko/src/main/resources/templates/zimnenko.html
+++ b/zimnenko/src/main/resources/templates/zimnenko.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<div style="color: red;">Hello world</div>
+<h1 style="color: red;">Zimnenko</h1>
 </body>
 </html>
